I mean, it looks *kind of* nice

--- a/index.html
+++ b/index.html
@@ -9,19 +9,13 @@
 <script id="applicationScript" type="text/javascript" src="resources/scripts/index.js"></script>
 </head>
 <body>
-<div id="Web_1280__1">
-	<div id="Component_1__2" class="Component_1___2">
-		<svg class="Rectangle_7">
-			<rect id="Rectangle_7" rx="0" ry="0" x="0" y="0" width="295" height="446">
-			</rect>
-		</svg>
-	</div>
-	<svg class="Rectangle_8">
-		<rect id="Rectangle_8" rx="0" ry="0" x="0" y="0" width="295" height="380">
-		</rect>
+<div id="Main_Page">
+	<svg class="Path_1" viewBox="0 0 378 538">
+		<path id="Path_1" d="M 0 0 L 378 0 L 378 537.9999389648438 L 0 537.9999389648438 L 0 0 Z">
+		</path>
 	</svg>
 	<svg class="Rectangle_9">
-		<rect id="Rectangle_9" rx="0" ry="0" x="0" y="0" width="1280" height="87">
+		<rect id="Rectangle_9" rx="0" ry="0" x="0" y="0" width="918" height="92">
 		</rect>
 	</svg>
 	<div id="Unofficial_Red_Mountain_ARC_Re">
@@ -29,28 +23,37 @@
 	</div>
 	<img id="rmhs" src="resources/images/rmhs.png" srcset="resources/images/rmhs.png 1x, resources/images/rmhs@2x.png 2x">
 		
-	<div id="Carrots">
-		<span>Carrots</span>
+	<div id="Component_5__1" class="Component_5___1">
+		<svg class="Rectangle_10">
+			<rect id="Rectangle_10" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			</rect>
+		</svg>
 	</div>
-	<div id="carrot_carrot_carrot_carrot__c">
-		<span>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot <br/>carrot carrot carrot carrot </span><br>
+	<div id="Component_4__1" class="Component_4___1">
+		<svg class="Rectangle_11">
+			<rect id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			</rect>
+		</svg>
 	</div>
-	<svg class="Rectangle_10">
-		<rect id="Rectangle_10" rx="0" ry="0" x="0" y="0" width="210" height="44">
-		</rect>
-	</svg>
-	<svg class="Rectangle_11">
-		<rect id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="210" height="44">
-		</rect>
-	</svg>
-	<svg class="Rectangle_12">
-		<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="210" height="43">
-		</rect>
-	</svg>
-	<svg class="Rectangle_13">
-		<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="210" height="43">
-		</rect>
-	</svg>
+	<div id="Component_2__1" class="Component_2___1">
+		<svg class="Rectangle_12">
+			<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			</rect>
+		</svg>
+	</div>
+	<div id="Component_3__1" class="Component_3___1">
+		<svg class="Rectangle_13">
+			<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			</rect>
+		</svg>
+	</div>
+	<div id="Data_Parser">
+		<span>Data Parser</span>
+	</div>
+	<div id="favicon-96x96" class="favicon_96x96">
+		<img id="favicon-96x96_v" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
+			
+	</div>
 </div>
 </body>
 </html>
