--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
 		<img id="favicon-96x96_v" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
 			
 	</div>
+	<div id="CREATORS">
+		<span>CREATORS</span>
+	</div>
 </div>
 </body>
 </html>
