Screwed up a bunch of stuff

--- a/index.html
+++ b/index.html
@@ -9,52 +9,52 @@
 <script id="applicationScript" type="text/javascript" src="resources/scripts/index.js"></script>
 </head>
 <body>
-<div id="Main_Page">
-	<svg class="Path_1" viewBox="0 0 378 538">
-		<path id="Path_1" d="M 0 0 L 378 0 L 378 537.9999389648438 L 0 537.9999389648438 L 0 0 Z">
+<div id="Main_Page" class="Main_Page_Class">
+	<svg class="Path_1" viewBox="0 0 378 685">
+		<path class="Path_1_Class" d="M 0 0 L 378 0 L 378 685 L 0 685 L 0 0 Z">
 		</path>
 	</svg>
 	<svg class="Rectangle_9">
-		<rect id="Rectangle_9" rx="0" ry="0" x="0" y="0" width="918" height="92">
+		<rect class="Rectangle_9_Class" rx="0" ry="0" x="0" y="0" width="918" height="92">
 		</rect>
 	</svg>
-	<div id="Unofficial_Red_Mountain_ARC_Re">
+	<div class="Unofficial_Red_Mountain_ARC_Re_Class">
 		<span>Unofficial Red Mountain ARC Resources</span>
 	</div>
-	<img id="rmhs" src="resources/images/rmhs.png" srcset="resources/images/rmhs.png 1x, resources/images/rmhs@2x.png 2x">
+	<img class="rmhs_Class" src="resources/images/rmhs.png" srcset="resources/images/rmhs.png 1x, resources/images/rmhs@2x.png 2x">
 		
-	<div id="Component_5__1" class="Component_5___1">
+	<div class="Component_5___1 Component_5__1_Class">
 		<svg class="Rectangle_10">
-			<rect id="Rectangle_10" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			<rect class="Rectangle_10_Class" rx="0" ry="0" x="0" y="0" width="224" height="46">
 			</rect>
 		</svg>
 	</div>
-	<div id="Component_4__1" class="Component_4___1">
+	<div class="Component_4___1 Component_4__1_Class">
 		<svg class="Rectangle_11">
-			<rect id="Rectangle_11" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			<rect class="Rectangle_11_Class" rx="0" ry="0" x="0" y="0" width="224" height="46">
 			</rect>
 		</svg>
 	</div>
-	<div id="Component_2__1" class="Component_2___1">
+	<div class="Component_2___1 Component_2__1_Class">
 		<svg class="Rectangle_12">
-			<rect id="Rectangle_12" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			<rect class="Rectangle_12_Class" rx="0" ry="0" x="0" y="0" width="224" height="46">
 			</rect>
 		</svg>
 	</div>
-	<div id="Component_3__1" class="Component_3___1">
+	<div class="Component_3___1 Component_3__1_Class">
 		<svg class="Rectangle_13">
-			<rect id="Rectangle_13" rx="0" ry="0" x="0" y="0" width="224" height="46">
+			<rect class="Rectangle_13_Class" rx="0" ry="0" x="0" y="0" width="224" height="46">
 			</rect>
 		</svg>
 	</div>
-	<div id="Data_Parser">
+	<div class="Data_Parser_Class">
 		<span>Data Parser</span>
 	</div>
-	<div id="favicon-96x96" class="favicon_96x96">
-		<img id="favicon-96x96_v" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
+	<div class="favicon_96x96 favicon-96x96_Class">
+		<img class="favicon-96x96_v_Class" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
 			
 	</div>
-	<div id="CREATORS">
+	<div class="CREATORS_Class">
 		<span>CREATORS</span>
 	</div>
 </div>
