--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div id="Main_Page" class="Main_Page_Class">
-	<svg class="Path_1" viewBox="0 0 378 646">
-		<path class="Path_1_Class" d="M 0 0 L 378 0 L 378 646 L 0 646 L 0 0 Z">
+	<svg class="Path_1" viewBox="0 0 378 524.433">
+		<path class="Path_1_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
 		</path>
 	</svg>
 	<svg class="Rectangle_9">
@@ -54,8 +54,17 @@
 		<img class="favicon-96x96_v_Class" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
 			
 	</div>
-	<div class="CREATORS_Class">
-		<span>CREATORS</span>
+	<div class="NEWS_Class">
+		<span>NEWS</span>
+	</div>
+	<div class="-_Data_parser_is_on_the_way_Class">
+		<span>- Data parser is on the way!</span>
+	</div>
+	<div class="-_Brayden_is_still_confused_Class">
+		<span>- Brayden is still confused!</span>
+	</div>
+	<div class="-_Official_release_of_Pineappl_Class">
+		<span>- Official release of Pineapple<br/>  mkII today!</span>
 	</div>
 </div>
 </body>
