--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
 </head>
 <body>
 <div id="Main_Page" class="Main_Page_Class">
-	<svg class="Path_1" viewBox="0 0 378 524.433">
-		<path class="Path_1_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
-		</path>
-	</svg>
 	<svg class="Rectangle_9">
 		<rect class="Rectangle_9_Class" rx="0" ry="0" x="0" y="0" width="918" height="92">
 		</rect>
@@ -51,9 +47,17 @@
 		<span>Data Parser</span>
 	</div>
 	<div class="favicon_96x96 favicon-96x96_Class">
-		<img class="favicon-96x96_v_Class" src="resources/images/favicon-96x96_v.png" srcset="resources/images/favicon-96x96_v.png 1x, resources/images/favicon-96x96_v@2x.png 2x">
+		<img class="favicon-96x96_u_Class" src="resources/images/favicon-96x96_u.png" srcset="resources/images/favicon-96x96_u.png 1x, resources/images/favicon-96x96_u@2x.png 2x">
 			
 	</div>
+	<svg class="Path_2" viewBox="0 0 378 524.433">
+		<path class="Path_2_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
+	<svg class="Path_3" viewBox="0 0 378 524.433">
+		<path class="Path_3_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
 	<div class="NEWS_Class">
 		<span>NEWS</span>
 	</div>
@@ -65,6 +69,32 @@
 	</div>
 	<div class="-_Official_release_of_Pineappl_Class">
 		<span>- Official release of Pineapple<br/>  mkII today!</span>
+	</div>
+	<div class="-_Carrots_are_better_than_ever_Class">
+		<span>- Carrots are better than<br/>ever before!</span>
+	</div>
+	<svg class="Path_5" viewBox="0 0 378 524.433">
+		<path class="Path_5_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
+	<svg class="Path_6" viewBox="0 0 378 524.433">
+		<path class="Path_6_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
+	<svg class="Path_7" viewBox="0 0 378 524.433">
+		<path class="Path_7_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
+	<svg class="Path_8" viewBox="0 0 378 524.433">
+		<path class="Path_8_Class" d="M 0 0 L 378 0 L 378 524.4332275390625 L 0 524.4332275390625 L 0 0 Z">
+		</path>
+	</svg>
+	<svg class="Rectangle_15">
+		<rect class="Rectangle_15_Class" rx="0" ry="0" x="0" y="0" width="1349" height="127">
+		</rect>
+	</svg>
+	<div class="Created_by_Simon_Hall_and_Bray_Class">
+		<span>Created by Simon Hall and Brayden Dale</span>
 	</div>
 </div>
 </body>
