--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Unofficial ARC Site</title>
-<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="/resources/css/index.css"/>
-<script id="applicationScript" type="text/javascript" src="/resources/scripts/index.js"></script>
+<link rel="stylesheet" type="text/css" id="applicationStylesheet" href="resources/css/index.css"/>
+<script id="applicationScript" type="text/javascript" src="resources/scripts/index.js"></script>
 </head>
 <body>
 <div id="Main_Page" class="Main_Page_Class">
@@ -17,7 +17,7 @@
 	<div class="Unofficial_Red_Mountain_ARC_Re_Class">
 		<span>Unofficial Red Mountain ARC Resources</span>
 	</div>
-	<img class="rmhs_Class" src="/resources/images/rmhs.png" srcset="/resources/images/rmhs.png 1x, /resources/images/rmhs@2x.png 2x">
+	<img class="rmhs_Class" src="resources/images/rmhs.png" srcset="resources/images/rmhs.png 1x, resources/images/rmhs@2x.png 2x">
 		
 	<div class="Component_5___1 Component_5__1_Class">
 		<svg class="Rectangle_10">
@@ -47,7 +47,7 @@
 		<span>Data Parser</span>
 	</div>
 	<div class="favicon_96x96 favicon-96x96_Class">
-		<img class="favicon-96x96_u_Class" src="/resources/images/favicon-96x96_u.png" srcset="/resources/images/favicon-96x96_u.png 1x, /resources/images/favicon-96x96_u@2x.png 2x">
+		<img class="favicon-96x96_u_Class" src="resources/images/favicon-96x96_u.png" srcset="resources/images/favicon-96x96_u.png 1x, resources/images/favicon-96x96_u@2x.png 2x">
 			
 	</div>
 	<svg class="Path_2" viewBox="0 0 378 524.433">
